--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+uploads/beranda/mixkit-going-down-a-curved-highway-through-a-mountain-range-41576-large.mp4
+.vscode/launch.json
+.vscode/launch.json
