--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ application/logs/*
 uploads/beranda/mixkit-going-down-a-curved-highway-through-a-mountain-range-41576-large.mp4
 .vscode/launch.json
 .vscode/launch.json
+application/config/database.php
