--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ uploads/beranda/mixkit-going-down-a-curved-highway-through-a-mountain-range-4157
 .vscode/launch.json
 .vscode/launch.json
 application/config/database.php
+application/config/database.php
