new file:   application/cache/sessions/ci_sessionk1qimj7160c6q6vaqen9ph9af58nt56f

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /user_guide_src/cilexer/build/*
 /user_guide_src/cilexer/dist/*
 /user_guide_src/cilexer/pycilexer.egg-info/*
+mis_dm.zip
+mis_dm.tar
+application/config/database.php
