--- a/.gitignore
+++ b/.gitignore
@@ -460,3 +460,4 @@ application/cache/sessions/ci_sessionvguig6m5ts8va2j3tai1gsonr6u993g1
 application/cache/sessions/ci_sessionvi3v8aq61raun0j095oulk0q4c44ehv4
 application/config/config.php
 application/config/config.php
+dm.zip
