--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ application/config/database.php
 application/config/config.php
 uploads/beranda/mixkit-going-down-a-curved-highway-through-a-mountain-range-41576-large.mp4
 application/cache/session
+uploads
